# xdev-net

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  test.py  test_server.py
.github/workflows/: check.yml
CMake/: GetBoost.cmake
cpp-router/: .gitmodules  CMakeLists.txt  README.md
cpp-router/include/: route_parameter.hpp  router.hpp  router_details.hpp
cpp-router/src/: main.cpp  router.cpp
cpp-router/tests/: CMakeLists.txt  basic.cpp  custom_type.cpp  return_value.cpp
include/net/: address.hpp  error.hpp  function_traits.hpp  http_client.hpp  http_parser.hpp  http_reply.hpp  http_request.hpp  http_server.hpp  net-config.hpp.in  net.hpp  route_parameter.hpp  router.hpp  router_details.hpp  socket.hpp  tcp.hpp  thread_guard.hpp  udp.hpp  unique_function.hpp  url.hpp
include/xdev/: function_traits.hpp  net.hpp  type_index.hpp  variant_tools.hpp
include/xdev/net/: config.hpp.in  http_client.hpp  http_server.hpp  route_parameter.hpp  router.hpp  router_details.hpp  url.hpp
patches/jthread/: 0001-msvc-unwrap_reference.patch  0002-inline-functions.patch
patches/nodejs-http-parser/: 0001-add-cmakelists.patch
samples/: CMakeLists.txt
samples/simple/: CMakeLists.txt  simple.cpp
src/: address.cpp  error.cpp  http_server.cpp  net.cpp  socket.cpp  tcp.cpp  udp.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp  test.cpp
tests/: CMakeLists.txt  net-test.hpp
tests/http/: CMakeLists.txt  http-basic.cpp  http-chunk.cpp  https-basic.cpp
tests/router/: CMakeLists.txt  basic.cpp  custom_type.cpp  return_value.cpp
tests/socket/: CMakeLists.txt  tcp.cpp  udp.cpp
tests/traits/: CMakeLists.txt  body_traits.cpp  function_traits.cpp  type_index.cpp
tests/url/: CMakeLists.txt  url.cpp
